# blue-pill-rust-excercises

./: .gitignore  Cargo.toml  README.md
src/: main.rs
